# SkillSpeed

./: .dockerignore  .env.example  .gitignore  AUTHORS  Dockerfile  Procfile  README.md  celerybeat-schedule  celerybeat-schedule-shm  celerybeat-schedule-wal  docker-compose.yml  pyproject.toml  pytest.ini  replit.md  request.http  requirements.txt  start.sh
src/: conftest.py  manage.py
src/apps/lesson/: __init__.py  apps.py  helpers.py  models.py  paginate.py  permissions.py  serializers.py  signals.py  urls.py  views.py
src/apps/lesson/migrations/: 0001_initial.py  0002_initial.py  0002_projects_recommendation_submission_progress_and_more.py  0003_alter_recommendation_recommendation_type.py  0003_initial.py
src/apps/lesson/recommendation/: models.py  serializers.py  urls.py  views.py
src/apps/lesson/utils/: services.py
src/apps/skills/: apps.py  helpers.py  models.py  paginations.py  serializers.py  urls.py  views.py
src/apps/skills/payments/: models.py  (+6 more)
src/apps/users/: apps.py  auth.py  auth_models.py  auth_views.py  backends.py  exceptions.py  helpers.py  models.py  serializers.py  signals.py  tests.py  urls.py  views.py
src/core/: __init__.py  asgi.py  celery.py  drf_ysag.py  service.py  urls.py  wsgi.py
src/core/settings/: base.py  development.py  production.py
src/test/: fixtures_config.py  helpers.py
src/test/factories/: user_factory.py
src/tests_config/: settings.py
src/tests_config/factories/: __init__.py  user_factory.py
src/tests_config/fixtures/: __init__.py  auth_fixtures.py  profile_fixtures.py  user_fixtures.py  utils_fixtures.py
(+42 files in other folders)
